fix up chat tab overflow dropdown

--- a/css/context/contextmenu.css
+++ b/css/context/contextmenu.css
@@ -572,18 +572,49 @@
   background-color: transparent !important;
 }
 
+.ChatTabsContextMenu .ChatTabContextMenuItem ._2XZq-_f6npaQdAgeRzKIkz.Yd-DsWkYiFiYwpci--Yk_ {
+  border-radius: 0px !important;
+}
+
+.PP7LM0Ow1K5qkR8WElLpt .ChatTabContextMenuItem  ._2XZq-_f6npaQdAgeRzKIkz .ChatRoomGroupAvatar.Smaller {
+  height: 24px !important;
+  width: 24px !important;
+}
+
 .PP7LM0Ow1K5qkR8WElLpt ._1JXI4j2_xSpVK1YjyEuebr {
-  margin-top: 0px !important;
+  margin: 0px !important;
+  width: 12px !important;
+  height: 12px !important;
+  /* position: absolute !important; */
+  /* right: 0px !important; */
 }
 
 .PP7LM0Ow1K5qkR8WElLpt ._2XZq-_f6npaQdAgeRzKIkz .nibodjvvrm86uCfnnAn4g.X-Small, .PP7LM0Ow1K5qkR8WElLpt ._2XZq-_f6npaQdAgeRzKIkz .ChatRoomGroupAvatar.Smaller {
-  width: 32px !important;
-  height: 32px !important;
+  width: 24px !important;
+  height: 24px !important;
 }
 
 .PP7LM0Ow1K5qkR8WElLpt ._21I8pyEfvklCsrYIcsBtYY, .chattabs_ChatTabContent_ChatRoom__ {
   padding: 0px !important;
   margin-top: 1px !important;
+}
+
+._3hCFlMxf40SP2WVNOubSvf {
+  height: 24px !important;
+}
+
+.ChatTabsContextMenu .SVGIcon_Button.SVGIcon_X_Line {
+  background-size: 12px !important;
+  width: 12px !important;
+  height: 12px !important;
+}
+
+.ChatTabContextMenuItem ._3hCFlMxf40SP2WVNOubSvf {
+  padding: 0px !important;
+}
+
+.ChatTabContextMenuItem ._2XZq-_f6npaQdAgeRzKIkz {
+  width: unset !important;
 }
 
 /* FIX FOR REACT HAVING REPEATED MENU */
@@ -741,7 +772,7 @@
 ._1n7Wloe5jZ6fSuvV18NNWI .SVGIcon_Button {
   width: 16px !important;
   height: 16px !important;
-  margin-right: 8px !important;
+  margin-right: 0px !important;
 }
 
 /* GAME SOURCE */
